// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Icon snapshots with default props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Icon
    name="any_name"
  />
</ContextProvider>
`;

exports[`Component: Icon snapshots with other props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Icon
    color="primary"
    name="any_name"
    size="large"
  />
</ContextProvider>
`;
